--- a/LaskarSampahIRT/Pages/Bank/BankSampahStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Bank/BankSampahStoryboard.storyboard
@@ -181,12 +181,15 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7gT-OF-7IL">
-                                <rect key="frame" x="34" y="649" width="307" height="59"/>
+                                <rect key="frame" x="34" y="649" width="307" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Petunjuk Arah">
                                     <color key="titleColor" red="0.82352941176470584" green="0.80784313725490198" blue="0.38431372549019605" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnPetunjukArah:" destination="oDw-yi-iLZ" eventType="touchUpInside" id="SUc-S1-uq4"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCX-Yf-zb8">
                                 <rect key="frame" x="52" y="498" width="307" height="36"/>
