--- a/LaskarSampahIRT/Pages/Home/HomeStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Home/HomeStoryboard.storyboard
@@ -17,8 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News and Tips" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQ8-pF-oiL">
+                                <rect key="frame" x="8" y="96" width="95" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2AL-8m-xvy">
-                                <rect key="frame" x="0.0" y="88.000000000000014" width="375" height="128.33333333333337"/>
+                                <rect key="frame" x="0.0" y="121.00000000000001" width="375" height="128.33333333333337"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="65j-PG-9ZN">
                                     <size key="itemSize" width="100" height="100"/>
@@ -75,7 +81,7 @@
                                 </cells>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n8M-Yg-3wO">
-                                <rect key="frame" x="8" y="224.33333333333334" width="359" height="496.66666666666663"/>
+                                <rect key="frame" x="8" y="282.33333333333326" width="359" height="438.66666666666674"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PriceCell" textLabel="6GF-Hy-ffP" detailTextLabel="DsT-rA-BZH" style="IBUITableViewCellStyleValue1" id="ZMp-O4-6gJ">
@@ -104,17 +110,27 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price List" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MwH-Il-xkM">
+                                <rect key="frame" x="8" y="257.33333333333331" width="60" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.99945229290000004" green="0.98950296640000002" blue="0.92548209429999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="znD-GF-Eua" firstAttribute="trailing" secondItem="n8M-Yg-3wO" secondAttribute="trailing" constant="8" id="39b-uE-a5L"/>
-                            <constraint firstItem="2AL-8m-xvy" firstAttribute="top" secondItem="znD-GF-Eua" secondAttribute="top" id="AOb-zu-Ubc"/>
+                            <constraint firstItem="2AL-8m-xvy" firstAttribute="top" secondItem="QQ8-pF-oiL" secondAttribute="bottom" constant="8" id="AXm-bU-PZ8"/>
+                            <constraint firstItem="QQ8-pF-oiL" firstAttribute="top" secondItem="znD-GF-Eua" secondAttribute="top" constant="8" id="Dfu-jP-X8J"/>
+                            <constraint firstItem="MwH-Il-xkM" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" constant="8" id="V7P-nP-Bb6"/>
                             <constraint firstItem="znD-GF-Eua" firstAttribute="bottom" secondItem="n8M-Yg-3wO" secondAttribute="bottom" constant="8" id="XDe-xv-AeH"/>
                             <constraint firstItem="2AL-8m-xvy" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" id="dso-rA-ftw"/>
                             <constraint firstItem="2AL-8m-xvy" firstAttribute="height" secondItem="znD-GF-Eua" secondAttribute="height" multiplier="0.2" id="lVA-nX-AeQ"/>
                             <constraint firstItem="znD-GF-Eua" firstAttribute="trailing" secondItem="2AL-8m-xvy" secondAttribute="trailing" id="lbk-BJ-I1b"/>
-                            <constraint firstItem="n8M-Yg-3wO" firstAttribute="top" secondItem="2AL-8m-xvy" secondAttribute="bottom" constant="8" id="msq-kh-sWv"/>
+                            <constraint firstItem="MwH-Il-xkM" firstAttribute="top" secondItem="2AL-8m-xvy" secondAttribute="bottom" constant="8" id="m6y-w6-l27"/>
                             <constraint firstItem="n8M-Yg-3wO" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" constant="8" id="uUU-vE-I8f"/>
+                            <constraint firstItem="n8M-Yg-3wO" firstAttribute="top" secondItem="MwH-Il-xkM" secondAttribute="bottom" constant="8" id="wgg-c1-zxa"/>
+                            <constraint firstItem="QQ8-pF-oiL" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" constant="8" id="zPL-Ek-WCF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="znD-GF-Eua"/>
                     </view>
