--- a/LaskarSampahIRT/Pages/Profile/ProfileStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Profile/ProfileStoryboard.storyboard
@@ -198,6 +198,15 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FDO-eq-6Cq">
+                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Profile" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="MxQ-P9-T8M">
+                                        <barButtonItem key="backBarButtonItem" title="Logout" id="rhp-HU-AAx"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="0.99945229290000004" green="0.98950296640000002" blue="0.92548209429999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
