fix image on news not showing properly, fix news long content not scrolling down

--- a/LaskarSampahIRT/Pages/Home/HomeStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Home/HomeStoryboard.storyboard
@@ -40,11 +40,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKa-M5-a6n" customClass="DesignableView" customModule="LaskarSampahIRT" customModuleProvider="target">
+                                                <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKa-M5-a6n" customClass="DesignableView" customModule="LaskarSampahIRT" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TkN-E4-B7U">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TkN-E4-B7U">
                                                             <rect key="frame" x="0.0" y="0.0" width="200" height="84"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                    <real key="value" value="10"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGb-jy-izC">
                                                             <rect key="frame" x="0.0" y="84" width="200" height="36"/>
